--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -15,7 +15,7 @@ jobs:
           xcode-version: "latest-stable"
 
       - name: Run swift tests
-        working-directory: ./Ares_framework
+        working-directory: ./Ares-framework
         run: |
           xcodebuild test \
             -project Ares_framework.xcodeproj \
