debugging swift-tests.yml

--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -13,7 +13,8 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "latest-stable"
-
+      - name: Debug Path
+        run: pwd && ls -R
       - name: Run swift tests
         working-directory: ./Ares-framework
         run: |
