--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -13,10 +13,9 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "latest-stable"
-      - name: Debug Path
-        run: pwd && ls -R
+          
       - name: Run swift tests
-        working-directory: ./Ares-framework
+        working-directory: ./ios-app
         run: |
           xcodebuild test \
             -project Ares_framework.xcodeproj \
