--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -13,12 +13,24 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "latest-stable"
-          
+      - name: Pre-boot Simulator
+        # ensures the simulator is ready before the tests start
+        run: |
+          xcrun simctl boot "iPhone 16 Pro" || true
+          xcrun simctl bootstatus "iPhone 16 Pro" -b
       - name: Run swift tests
         working-directory: ./ios-app
         run: |
           xcodebuild test \
             -project Ares_framework.xcodeproj \
             -scheme Ares_framework \
-            -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=latest'
-            -resultBundlePath TestResults.xcresult
+            -destination "platform=iOS Simulator,name=iPhone 16 Pro" \
+            -test-timeouts 300 \
+            -parallel-testing-enabled NO \
+      - name: Upload Test Results
+        #runs even if tests fail
+        if: always()
+        uses: actions/checkout@v4
+        with:
+          name: ares-ios-test-results
+          path: ios-app/TestResults.xcresult
